--- a/app/index.html
+++ b/app/index.html
@@ -1047,6 +1047,7 @@
                     </form>
 
                     <form class="hidden" data-type="section-names">
+                        <div class="panel warning hidden">Fill all the fields names first</div>
                         <ul class="custom-marks-list"></ul>
                     </form>  
                 </div>
@@ -1059,7 +1060,7 @@
                 <button type="button" class="btn btn-primary hidden">Share on FB</button>
                 <button type="button" class="btn btn-primary hidden">Share on Instagram</button>
             </div>
-            <button type="button" class="btn btn-primary" data-type="show-block">Create your own Wheel of Life</button>
+            <button type="button" class="btn btn-primary" data-type="create-custom-circle">Create your own Wheel of Life</button>
 
             <button type="button" class="btn btn-primary" data-type="show-default">Show default Wheel of Life</button>
         </div> 
