New branch with design added. Design separated in css in master

--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,13 @@
         <h2 class="text-center">Click on each life area to evaluate it</h2>
         <div id="default-wheel-container" class="center-block">
             <div class="row default-wheel">
+ <!--               <section class="stage">
+                    <figure class="ball">
+                        <span class="eight"></span>
+                    </figure>
+                    <span class="shadow"></span>
+                </section>-->
+
                 <div class="col-lg-7">
                     <div class="circle-wrapper hidden" data-type="0">
                         <ul class="circle headings">
@@ -1082,6 +1089,7 @@
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
