Close btn from error container removed

--- a/app/index.html
+++ b/app/index.html
@@ -46,9 +46,9 @@
               <div class="alert-icon">
                 <i class="material-icons">error_outline</i>
               </div>
-              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <!--<button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true"><i class="material-icons">clear</i></span>
-              </button>
+              </button>-->
               <b>Fill all the fields names first...</b>
             </div>
           </div>
