--- a/app/form/form.html
+++ b/app/form/form.html
@@ -1,6 +1,6 @@
 <div class="" data-type="section-names">
   <div class="form-group label-floating" ng-repeat=""> <!-- repeat n-times -->
-    <label class="control-label">{{ fieldName }}</label>
-    <input type="text" class="form-control" />
+    <label class="control-label">Field name</label>
+    <input type="text" class="form-control" ng-model="main.categoryName" />
   </div>
 </div>
