--- a/app/index.html
+++ b/app/index.html
@@ -1,137 +1,195 @@
-<!doctype html>
-<html class="no-js" lang="en" ng-app="wheeloflife">
-  <head>
-    <meta charset="utf-8">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wheel of Life</title>
+  <!doctype html>
+  <html class="no-js" lang="en" ng-app="wheeloflife">
+    <head>
+      <meta charset="utf-8">
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Wheel of Life</title>
 
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <!-- Place favicon.ico in the root directory -->
+      <link rel="apple-touch-icon" href="apple-touch-icon.png">
+      <!-- Place favicon.ico in the root directory -->
 
-    <!-- build:css styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
+      <!-- build:css styles/vendor.css -->
+      <!-- bower:css -->
+      <!-- endbower -->
+      <!-- endbuild -->
 
-    <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/material-kit.css">
-    <link rel="stylesheet" href="styles/custom.css">
-    <!-- endbuild -->
+      <!-- build:css styles/main.css -->
+      <link rel="stylesheet" href="styles/main.css">
+      <link rel="stylesheet" href="styles/material-kit.css">
+      <link rel="stylesheet" href="styles/custom.css">
+      <!-- endbuild -->
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+      <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
-    <!-- build:js scripts/vendor/modernizr.js -->
-    <script src="/bower_components/modernizr/modernizr.js"></script>
-    <!-- endbuild -->
-  </head>
-  <body>
-    <!--[if lt IE 10]>
-      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
+      <!-- build:js scripts/vendor/modernizr.js -->
+      <script src="/bower_components/modernizr/modernizr.js"></script>
+      <!-- endbuild -->
+    </head>
+    <body ng-controller="commonCtrl as common">
+      <!--[if lt IE 10]>
+        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <![endif]-->
 
-    <div class="container" ng-controller="mainCtrl as main">
-      <div class="new-circle-btn" ng-controller="actionBtns as btn">
-        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#area-number" data-type="create-custom-circle"
-                ng-click="circle.activateCustomCircle()">Create your own Wheel of Life</button>
-        <button type="button" class="btn btn-info" data-type="show-default">Show default Wheel of Life</button>
+      <div class="container">
+        <div class="new-circle-btn">
+          <button
+            ui-sref="custom"
+            type="button"
+            class="btn btn-info"
+            data-toggle="modal"
+            data-target="#area-number"
+            data-type="create-custom-circle"
+            ui-sref-active="active"
+            ng-click="common.setCustom()">
+            Create your own Wheel of Life
+          </button>
+          <button
+            ui-sref="default"
+            type="button"
+            ui-sref-active="active"
+            class="btn btn-info" data-type="show-default"
+            ng-click="common.setDefault()">Show default Wheel of Life</button>
+        </div>
+        <h2 class="text-center"><strong>Check what your life is about at the moment</strong></h2>
+        <h3 class="subtitle text-center">Don't overthink think it — just click it and save it</h3>
+        {{ common.isDefault }}
+        <div ui-view></div>
+
+        <!--<div ng-controller="dafaultCircleController as dCircle" ng-hide="dCircle.defaultCircle">
+          <div id="custom-wheel-container" class="center-block" >
+            <div class="row">
+
+              <div class="col-lg-7">
+
+              </div>
+
+              <div class="col-lg-5">
+
+              </div>
+            </div> &lt;!&ndash; row default-wheel &ndash;&gt;
+          </div> &lt;!&ndash; default-wheel-container &ndash;&gt;
+        </div>-->
+
+
+        <div class="clearfix"></div>
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="export-btns">
+              <button type="button" data-type="jpg-btn" class="btn btn-info btn-block">Save as .JPG</button>
+              <!--<button type="button" class="btn btn-primary hidden">Share on FB</button>
+              <button type="button" class="btn btn-primary hidden">Share on Instagram</button>-->
+            </div>
+          </div>
+        </div>
+      </div> <!-- .container -->
+      <div class="footer fixed-bottom">
+        <p class="center-block text-center">♥ from <a href="http://www.thewebbird.me">thewebbird.me</a></p>
       </div>
-      <h2 class="text-center"><strong>Check what your life is about at the moment</strong></h2>
-      <h3 class="subtitle text-center">Don't overthink think it — just click it and save it</h3>
 
-      <div ui-view  ></div>
-
-      <!--<div ng-controller="dafaultCircleController as dCircle" ng-hide="dCircle.defaultCircle">
-        <div id="custom-wheel-container" class="center-block" >
-          <div class="row">
-
-            <div class="col-lg-7">
-
+      <div class="modal fade" id="area-number" tabindex="-1" role="dialog" aria-labelledby="area-numberLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+              <h4 class="modal-title" id="area-numberLabel">Select an even number of areas</h4>
             </div>
+            <div class="modal-body">
+              <form ng-submit="common.setNumber(common.number)">
+                <div class="form-group">
+                  <label for="section-amt">How many areas of your life would you like to evaluate?</label>
+                  <select name="section-amt" id="section-amt" class="form-control"
+                          ng-model="common.number">
+                    <option value="0" selected>Select amount</option>111
+                    <option>4</option>
+                    <option>6</option>
+                    <option>8</option>
+                    <option>10</option>
+                    <option>12</option>
+                  </select>
+                <button type="submit">Submit {{ common.number }}</button>
 
-            <div class="col-lg-5">
-
+                </div>
+              </form>
             </div>
-          </div> &lt;!&ndash; row default-wheel &ndash;&gt;
-        </div> &lt;!&ndash; default-wheel-container &ndash;&gt;
-      </div>-->
-
-
-      <div class="clearfix"></div>
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="export-btns">
-            <button type="button" data-type="jpg-btn" class="btn btn-info btn-block">Save as .JPG</button>
-            <!--<button type="button" class="btn btn-primary hidden">Share on FB</button>
-            <button type="button" class="btn btn-primary hidden">Share on Instagram</button>-->
           </div>
         </div>
       </div>
-    </div> <!-- .container -->
-    <div class="footer fixed-bottom">
-      <p class="center-block text-center">♥ from <a href="http://www.thewebbird.me">thewebbird.me</a></p>
-    </div>
 
 
-    <!-- Global Site Tag (gtag.js) - Google Analytics -->
-<!--    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107299149-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments)};
-      gtag('js', new Date());
+      <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <!--    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107299149-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments)};
+        gtag('js', new Date());
 
-      gtag('config', 'UA-107299149-1');
-    </script>-->
+        gtag('config', 'UA-107299149-1');
+      </script>-->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.js"></script>
-    <script src="vendor/angular-ui-router.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.js"></script>
+      <script src="vendor/angular-ui-router.min.js"></script>
 
-    <!-- build:js scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
+      <!-- build:js scripts/vendor.js -->
+      <!-- bower:js -->
+      <script src="/bower_components/jquery/dist/jquery.js"></script>
+      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
+      <!-- endbower -->
+      <!-- endbuild -->
 
-    <!-- build:js scripts/plugins.js -->
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/transition.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/popover.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/carousel.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
-    <script src="/node_modules/dom-to-image/dist/dom-to-image.min.js"></script>
+      <!-- build:js scripts/plugins.js -->
+      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js"></script>
+      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js"></script>
+      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js"></script>
+      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js"></script>
+      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/transition.js"></script>
+      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/button.js"></script>
+      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/popover.js"></script>
+      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/carousel.js"></script>
+      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js"></script>
+      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
+      <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
+      <script src="/node_modules/dom-to-image/dist/dom-to-image.min.js"></script>
 
-    <!-- endbuild -->
+      <!-- endbuild -->
 
-    <!-- build:js scripts/main.js -->
-    <script src="vendor/material.min.js"></script>
+      <!-- build:js scripts/main.js -->
+      <script src="vendor/material.min.js"></script>
 
-    <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-    <!-- <script src="scripts/nouislider.min.js" type="text/javascript"></script> -->
-    <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-    <script src="vendor/material-kit.js" type="text/javascript"></script>
-    <script src="scripts/bundle.js"></script>
-    <!-- endbuild -->
-
-
-    <script src="app.js"></script>
-    <script src="main/mainCtrl.js"></script>
-    <script src="circle/circle-directive.js"></script>
-    <script src="graph/graph-directive.js"></script>
+      <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+      <!-- <script src="scripts/nouislider.min.js" type="text/javascript"></script> -->
+      <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
+      <script src="vendor/material-kit.js" type="text/javascript"></script>
+      <script src="scripts/bundle.js"></script>
+      <!-- endbuild -->
 
 
-    <script src="controllers/actionBtns.js"></script>
-    <script src="controllers/circles.js"></script>
-    <script src="controllers/default.js"></script>
-    <script src="factories/circleMetrics.js"></script>
-  </body>
-</html>
+      <script src="app.js"></script>
+
+      <!-- TODO rename all controllers -->
+      <script src="common/common.js"></script>
+      <script src="common/commonService.js"></script>
+      <script src="common/commonCtrl.js"></script>
+
+
+      <script src="circle/circle-directive.js"></script>
+      <script src="circle/circleCtrl.js"></script>
+      <script src="circle/circleService.js"></script>
+      <script src="graph/graph-directive.js"></script>
+      <script src="form/formCtrl.js"></script>
+
+      <script src="default/defaultController.js"></script>
+      <script src="default/defaultService.js"></script>
+
+      <script src="custom/customCtrl.js"></script>
+      <script src="custom/customService.js"></script>
+
+
+     <!-- <script src="controllers/actionBtns.js"></script>
+      <script src="controllers/circles.js"></script>
+      <script src="controllers/default.js"></script>
+      <script src="factories/circleMetrics.js"></script>-->
+    </body>
+  </html>
