--- a/app/custom/custom.html
+++ b/app/custom/custom.html
@@ -1,11 +1,99 @@
+  <div class="row" ng-show="common.formShown">
+    <div class="col-xs-4 col-sm-offset-4">
+      <form ng-submit="custom.setCategoriesNumber(common.number)">
+        <div class="form-group">
+          <label for="section-amt">How many areas of your life would you like to evaluate?</label>
+          <select name="section-amt" id="section-amt" class="form-control"
+                  ng-model="common.number">
+            <option value="0" selected>Select amount</option>
+            <option>4</option>a
+            <option>6</option>
+            <option>8</option>
+            <option>10</option>
+            <option>12</option>
+          </select>
+          <button type="submit" ng-click="common.formShown = false">Submit {{ common.number }}</button>
 
-  <div class="row">
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <div class="row" ng-hide="common.formShown">
     <div class="col-lg-7">
       <div id="custom-wheel-container" class="center-block" >
-        <circle></circle>
+        <div class="circle-wrapper">
+          <ul class="circle{{ common.number }} headings">
+            <li ng-repeat="category in custom.categoriesTemplate">
+              <div class="text"><h5>{{ category.name }}</h5></div>
+            </li>
+          </ul>
+          <!-- todo: remove all inline styles -->
+          <ul class="circle{{ common.number }} body">
+            <li ng-repeat="category in custom.categoriesTemplate" class="{{ category.bgColor }}">
+              <div class="text" >
+                <span class="{{ category.activeStyle }}" ng-repeat="grade in custom.grades" ng-click="common.setGrades(category, grade)">
+                  <a href="#">{{ grade.grade }}</a>
+                </span>
+              </div>
+            </li>
+          </ul>
+        </div>
+
       </div>
     </div>
     <div class="col-lg-5">
-      <graph><graph>
+      <!--<graph></graph>-->
+
+      <div>
+        <h3>Your state for <span class="date">{{ common.date | date:'dd.MM.yyyy' }}</span></h3>
+        <ul class="marks-list">
+          <!--todo group them by color for default wheel-->
+          <li class="default" ng-repeat="category in custom.titles">
+            <span class="area-name">{{ category.name }} </span>
+            <span class="mark {{ category.activeStyle }}">{{ category.grade }}</span>
+            <div class="progress">
+              <div
+                style="width: {{ category.grade }}0%"
+                class="progress-bar {{ category.activeStyle }}"
+                role="progressbar"
+                aria-valuenow="60"
+                aria-valuemin="0"
+                aria-valuemax="100"></div>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+      <categories></categories>
     </div>
   </div>
+
+  <!--<div class="modal fade" id="area-number" tabindex="-1" role="dialog" aria-labelledby="area-numberLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="area-numberLabel">Select an even number of areas</h4>
+        </div>
+        <div class="modal-body">
+          <form ng-submit="custom.setCategoriesNumber(common.number)">
+            <div class="form-group">
+              <label for="section-amt">How many areas of your life would you like to evaluate?</label>
+              <select name="section-amt" id="section-amt" class="form-control"
+                      ng-model="common.number">
+                <option value="0" selected>Select amount</option>
+                <option>4</option>
+                <option>6</option>
+                <option>8</option>
+                <option>10</option>
+                <option>12</option>
+              </select>
+              <button type="submit">Submit {{ common.number }}</button>
+
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>-->
