--- a/app/form/form.html
+++ b/app/form/form.html
@@ -1,6 +1,8 @@
 <div class="" data-type="section-names">
-  <div class="form-group label-floating" ng-repeat=""> <!-- repeat n-times -->
+  <div class="form-group label-floating"
+       ng-repeat="category in custom.categoriesTemplate"
+       ng-hide="category.emptyValue" class="ng-hide" >
     <label class="control-label">Field name</label>
-    <input type="text" class="form-control" ng-model="main.categoryName" />
+    <input type="text" class="form-control" ng-model="category.name" ng-blur="custom.setName(category.name, $event)" />
   </div>
 </div>
