--- a/app/directives/error/error.html
+++ b/app/directives/error/error.html
@@ -1,8 +1,8 @@
-<div class="alert alert-danger hidden">
+<div class="alert alert-danger" ng-show="common.showError">
   <div class="container-fluid">
     <div class="alert-icon">
       <i class="material-icons">error_outline</i>
     </div>
-    <b>{{ errorMessage }}</b> <!-- Fill all the fields names first... -->
+    <b>{{ common.errorMessage }}</b>
   </div>
 </div>
