--- a/app/directives/graph/graph.html
+++ b/app/directives/graph/graph.html
@@ -1,4 +1,4 @@
-<div class="" >
+<div>
   <h3>Your state for <span class="date">{{ common.date | date:'dd.MM.yyyy' }}</span></h3>
   <ul class="marks-list">
     <!--todo group them by color for default wheel-->
