--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,9 @@
   <html class="no-js" lang="en" ng-app="wheeloflife">
     <head>
       <meta charset="utf-8">
-      <meta name="description" content="">
+      <meta name="description" content="Build your own Wheel of Life in seconds. Online tool for quick life evaluation">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Wheel of Life</title>
+      <title>Wheel of Life - Online Tool</title>
 
       <link rel="apple-touch-icon" href="apple-touch-icon.png">
       <!-- Place favicon.ico in the root directory -->
@@ -28,7 +28,7 @@
       <script src="/bower_components/modernizr/modernizr.js"></script>
       <!-- endbuild -->
     </head>
-    <body ng-controller="commonCtrl as common">
+    <body ng-controller="commonCtrl as common" class="ng-cloak">
       <!--[if lt IE 10]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
@@ -53,16 +53,17 @@
             class="btn btn-info" data-type="show-default"
             ng-click="common.setDefault()">Show default Wheel of Life</button>
         </div>
+
         <div ng-hide="common.formShown">
           <h2 class="text-center"><strong>Check what your life is about at the moment</strong></h2>
           <h3 class="subtitle text-center">Don't overthink think it — just click it and save it</h3>
         </div>
 
-        {{ common.number }}
-        {{ common.formShown }}
         <div ui-view></div>
 
         <div class="clearfix"></div>
+
+        <!-- todo hide for /custom form -->
         <div class="row" ng-hide="common.formShown">
           <div class="col-xs-12">
             <div class="export-btns">
@@ -77,18 +78,15 @@
         <p class="center-block text-center">♥ from <a href="http://www.thewebbird.me">thewebbird.me</a></p>
       </div>
 
-
-
-
       <!-- Global Site Tag (gtag.js) - Google Analytics -->
-  <!--    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107299149-1"></script>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107299149-1"></script>
       <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments)};
         gtag('js', new Date());
 
         gtag('config', 'UA-107299149-1');
-      </script>-->
+      </script>
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.js"></script>
       <script src="vendor/angular-ui-router.min.js"></script>
@@ -113,7 +111,6 @@
       <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
       <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
       <script src="/node_modules/dom-to-image/dist/dom-to-image.min.js"></script>
-
       <!-- endbuild -->
 
       <!-- build:js scripts/main.js -->
@@ -126,33 +123,27 @@
       <script src="scripts/bundle.js"></script>
       <!-- endbuild -->
 
-
       <script src="app.js"></script>
 
       <!-- TODO rename all controllers -->
-      <script src="common/common.js"></script>
-      <script src="common/commonService.js"></script>
       <script src="common/commonCtrl.js"></script>
+      <script src="common/commonService.js"></script>
 
+      <script src="directives/error/error-directive.js"></script>
+      <script src="directives/error/errorService.js"></script>
 
-      <script src="circle/circle-directive.js"></script>
-      <script src="circle/circleCtrl.js"></script>
-      <script src="circle/circleService.js"></script>
-      <script src="graph/graph-directive.js"></script>
-      <script src="form/formCtrl.js"></script>
+      <script src="directives/circle/circle-directive.js"></script>
+      <script src="directives/circle/circle-body-directive.js"></script>
 
-      <script src="default/defaultController.js"></script>
+      <script src="directives/graph/graph-directive.js"></script>
+
+      <script src="default/defaultCtrl.js"></script>
       <script src="default/defaultService.js"></script>
 
       <script src="custom/customCtrl.js"></script>
       <script src="custom/customService.js"></script>
 
-      <script src="form/form-directive.js"></script>
+      <script src="directives/form/category-title-form-directive.js"></script>
 
-
-     <!-- <script src="controllers/actionBtns.js"></script>
-      <script src="controllers/circles.js"></script>
-      <script src="controllers/default.js"></script>
-      <script src="factories/circleMetrics.js"></script>-->
     </body>
   </html>
