--- a/app/index.html
+++ b/app/index.html
@@ -16,14 +16,12 @@
 
       <!-- build:css styles/main.css -->
       <link rel="stylesheet" href="styles/main.css">
-      <link rel="stylesheet" href="styles/material-kit.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-kit/1.1.0/css/material-kit.min.css" />
       <link rel="stylesheet" href="styles/custom.css">
       <!-- endbuild -->
-
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
       <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-
       <!-- build:js scripts/vendor/modernizr.js -->
       <script src="/bower_components/modernizr/modernizr.js"></script>
       <!-- endbuild -->
@@ -89,12 +87,13 @@
       </script>
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.js"></script>
-      <script src="vendor/angular-ui-router.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js"></script>
 
       <!-- build:js scripts/vendor.js -->
       <!-- bower:js -->
       <script src="/bower_components/jquery/dist/jquery.js"></script>
       <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
+      <script src="/bower_components/modernizr/modernizr.js"></script>
       <!-- endbower -->
       <!-- endbuild -->
 
@@ -125,7 +124,6 @@
 
       <script src="app.js"></script>
 
-      <!-- TODO rename all controllers -->
       <script src="common/commonCtrl.js"></script>
       <script src="common/commonService.js"></script>
 
