--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
+  <script src="https://unpkg.com/vue/dist/vue.js"></script>
+  <script src="https://unpkg.com/element-ui/lib/index.js"></script></script>
 </html>
