--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- todo move to local -->
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Didact+Gothic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Didact+Gothic" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <title>wheeloflife</title>
