--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,13 @@
     <!-- built files will be auto injected -->
   </body>
 
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107299149-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments)};
+    gtag('js', new Date());
+    gtag('config', 'UA-107299149-1');
+  </script>
   <script src="https://unpkg.com/vue/dist/vue.js"></script>
 </html>
